--- a/course/templates/course/archive.html
+++ b/course/templates/course/archive.html
@@ -25,7 +25,7 @@
     {% endfor %}
 
     {% if not instances and not siteadvert %}
-			<div class="panel-body">
+			<div class="card-body">
 				<p class="panel-default-text">
 					{% translate "NO_COURSES_FOUND" %}
 				</p>
