--- a/deviations/templates/deviations/override_dl.html
+++ b/deviations/templates/deviations/override_dl.html
@@ -14,8 +14,8 @@
 	<form method="post" class="form-horizontal">
 		{% csrf_token %}
 		<div class="card">
-			<div class="card-header bg-primary">
-				<h5 class="card-title text-white">{% translate "SELECT_DEVIATIONS_TO_BE_OVERRIDDEN" %}</h5>
+			<div class="card-header text-bg-primary">
+				<h5 class="card-title">{% translate "SELECT_DEVIATIONS_TO_BE_OVERRIDDEN" %}</h5>
 			</div>
 			<table class="table table-striped table-bordered table-sm filtered-table ordered-table grouped-table">
 				<thead>
