--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -14,8 +14,8 @@
 {% block coursecontent %}
 <br />
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title text-white">{% translate "BATCH_CREATE_AND_ASSESS_SUBMISSIONS" %}</h5>
+    <div class="card-header text-bg-primary">
+        <h5 class="card-title">{% translate "BATCH_CREATE_AND_ASSESS_SUBMISSIONS" %}</h5>
     </div>
     <div class="panel-body">
         {% blocktranslate trimmed with profile.id as id %}
