--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -13,8 +13,8 @@
 {% block coursecontent %}
 <br />
 <div class="card mb-4">
-  <div class="card-header bg-primary">
-    <h5 class="card-title text-white">{% translate "COURSE_INSTANCES" %}</h5>
+  <div class="card-header text-bg-primary">
+    <h5 class="card-title">{% translate "COURSE_INSTANCES" %}</h5>
   </div>
   <table class="table table-striped aplus-table-bordered table-sm mb-0">
     <tbody>
