--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -40,8 +40,8 @@
   </div>
 </div>
 <div class="card mb-4">
-    <div class="card-header bg-primary">
-        <h5 class="card-title text-white">{% translate "EXERCISE_CATEGORIES" %}</h5>
+    <div class="card-header text-bg-primary">
+        <h5 class="card-title">{% translate "EXERCISE_CATEGORIES" %}</h5>
     </div>
     <table class="table table-striped aplus-table-bordered table-sm mb-0">
         <tbody>
@@ -76,8 +76,8 @@
 </div>
 
 <div class="card mb-4">
-    <div class="card-header bg-primary">
-        <h5 class="card-title text-white">{% translate "COURSE_MODULES" %}</h5>
+    <div class="card-header text-bg-primary">
+        <h5 class="card-title">{% translate "COURSE_MODULES" %}</h5>
     </div>
     <table class="table table-striped aplus-table-bordered table-sm mb-0">
         <tbody>
