--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -29,7 +29,7 @@
 
 <div class="card mb-3">
 	<div class="card-header text-bg-primary">
-		<h4 class="panel-title">{% translate "EXERCISE_INFO" %}</h4>
+		<h4 class="card-title">{% translate "EXERCISE_INFO" %}</h4>
 	</div>
 	<div class="card-body">
 		<dl>
