--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -4,8 +4,8 @@
 
 {% if news %}
 	<div class="card news-panel">
-		<div class="card-header bg-primary">
-			<h5 class="card-title text-white">{% translate "COURSE_NEWS" %}</h5>
+		<div class="card-header text-bg-primary">
+			<h5 class="card-title">{% translate "COURSE_NEWS" %}</h5>
 		</div>
 		<div class="list-group">
 			{% for item in language_news %}
