--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -55,17 +55,6 @@ article {
 		margin-left: -12px;
 	}
 
-	/*.user-menu.navbar-nav {
-		li {
-			a {
-				padding-top: $navbar-padding-vertical;
-				padding-bottom: $navbar-padding-vertical;
-				padding-left: 0.75rem;
-				padding-right: 0.75rem;
-			}
-		}
-	}*/ // TODO: CHECK FOR REMOVAL #1442
-
 	a.navbar-brand:hover,
 	a.navbar-dropdown > a:hover,
 	.navbar-toggler:hover,
@@ -85,53 +74,6 @@ article {
 			background-color: rgba(0,0,0,0.1);
 		}
 	}
-/*
-	.navbar-brand + .navbar-text {
-		float: left;
-		font-size: $font-size-small;
-		color: $gray-lighter;
-	}
-
-	.navbar-toggle .badge {
-		position: absolute;
-		right: -10px;
-		top: 4px;
-	}
-	.navbar-toggle {
-		&:focus,
-		&:hover {
-			background-color: #fff;
-			@include focus-with-background-and-color;
-
-			.icon-bar {
-				background-color: #000000;
-			}
-		}
-	}
-
-	.navbar-header {
-		.visible-xs {
-			max-width: 250px;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-		}
-		@media (max-width: $grid-float-breakpoint-max) {
-			.instance-selector {
-				margin-left: 30px;
-			}
-
-			.navbar-nav.instance-selector {
-				li.open {
-					a {
-						background-color: #005eb8;
-						color: #fff;
-					}
-				}
-			}
-		}
-	}
-*/ // TODO: CHECK FOR REMOVAL #1442
 	.navbar-dropdown {
 		div.dropdown-backdrop {
 			display: none;
@@ -141,79 +83,31 @@ article {
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
-			max-width: 70vw;
 			display: block;
 		}
-
-		@media (max-width: $screen-md-max) {
-			li.dropdown > a.dropdown-toggle {
-				max-width: 55vw;
-			}
-		}
-
-		@media (max-width: $screen-sm-max) {
-			li.dropdown > a.dropdown-toggle {
-				max-width: 45vw;
-			}
-		}
-
-		@media (max-width: $screen-xs-max) {
-			li.dropdown > a.dropdown-toggle {
-				max-width: 45vw;
-			}
-
-			li.open > ul.dropdown-menu {
-				& > li > a{
-					color: #dadada;
-				}
-			}
-		}
 	}
-/*
-	ul.visible-xs {
-		margin: 0;
+}
 
-		li {
-			border: 1px solid;
-			border-top: none;
-			border-color: #236aa7;
-			border-color: rgba(0, 0, 0, 0.25);
-			a {
-				color: white;
-				padding: 10px 15px !important;
-			}
-		}
-		ul.dropdown-menu {
-			padding: 0;
+// Make the left side (brand + course dropdown) flexible
+.topbar .d-flex.align-items-center.ps-2 {
+    flex: 1 1 auto;
+    min-width: 0;
 
-			li {
-				border: none;
-				border-top: 1px solid;
+    .navbar-dropdown {
+        flex: 1 1 start;
+        min-width: 0;
 
-				button[type="submit"] {
-					color: #dadada;
-					height: 2.63em;
-					&:hover,
-					&:focus {
-						@include focus-with-background-and-color;
-						background-color: #236aa7;
-						background-color: rgba(0, 0, 0, 0.1);
-					}
-				}
-			}
-		}
-		.header {
-			border-left: none;
-			border-right: none;
-			padding: 0.2em 1em;
+        li.dropdown {
+            min-width: 0;
 
-			h4 {
-				font-size: 1em;
-				font-weight: bolder;
-				color: #ffffff;
-				margin: 0;
-			}
-		}
-	}
-*/ // TODO: CHECK FOR REMOVAL #1442
+            > a.dropdown-toggle {
+                max-width: 100%;
+            }
+        }
+    }
+}
+
+// Ensure the right side doesn't shrink
+.topbar .d-flex.gap-2 {
+    flex: 0 0 auto;
 }
