--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -30,8 +30,8 @@
 	<form method="post" class="form-horizontal">
 		{% csrf_token %}
 		<div class="card">
-			<div class="card-header bg-primary">
-				<h5 class="card-title text-white">{% translate "DEADLINE_DEVIATIONS" %}</h5>
+			<div class="card-header text-bg-primary">
+				<h5 class="card-title">{% translate "DEADLINE_DEVIATIONS" %}</h5>
 			</div>
 			<table class="table table-striped aplus-table-bordered table-sm filtered-table ordered-table grouped-table mb-0" data-default-sort-column="6" data-default-sort-order="desc">
 				<thead>
