--- a/edit_course/templates/edit_course/usertag_list.html
+++ b/edit_course/templates/edit_course/usertag_list.html
@@ -20,8 +20,8 @@
 	</a>
 </p>
 <div class="card">
-	<div class="card-header bg-primary">
-		<h5 class="card-title text-white">{% translate "STUDENT_TAGS" %}</h5>
+	<div class="card-header text-bg-primary">
+		<h5 class="card-title">{% translate "STUDENT_TAGS" %}</h5>
 	</div>
 	<table class="table table-striped aplus-table-bordered table-sm mb-0">
 		<tr>
