--- a/exercise/templates/exercise/_submission_list.html
+++ b/exercise/templates/exercise/_submission_list.html
@@ -2,8 +2,8 @@
 {% load course %}
 {% load exercise %}
 <div class="card">
-	<div class="card-header bg-primary">
-		<h4 class="panel-title">{{ title }}</h4>
+	<div class="card-header text-bg-primary">
+		<h4 class="card-title">{{ title }}</h4>
 	</div>
 	<div class="list-group">
 		{% for submission in submissions %}
