--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -62,6 +62,10 @@ $card-title-spacer-y: 0px;
 // Legacy panel look for BS5 cards
 //$card-bg: #f5f5f5;
 
+$primary-border-subtle: $aplus-focus;
+$focus-ring-color: $aplus-focus;
+$input-focus-border-color: $aplus-focus;
+
 @import 'vendor/bootstrap5';
 
 // Import Bootstrap Icons (change font file directory from default)
