--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -36,7 +36,7 @@
 	<div class="offcanvas-md offcanvas-md-start offcanvas-top navbar-nav-scroll col-md-2" id="bs-navbar-collapse">
 		<div class="offcanvas-body">
 			<button
-				class="aplus-button--secondary course-sidebar-expander d-none d-flex align-items-center justify-content-center"
+				class="aplus-button--secondary course-sidebar-expander d-none d-flex align-items-center justify-content-center mb-1"
 				title="{% translate 'EXPAND_SIDEBAR' %}"
 				aria-label="{% translate 'EXPAND_SIDEBAR' %}"
 				data-bs-toggle="tooltip"
