--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -64,7 +64,7 @@
 
 				{% elif exercise.is_submittable %}
 					<nav class="exercise-summary navbar navbar-expand-sm bg-body-secondary" aria-label="{{ exercise|parse_localization }}">
-						<div class="container-fluid">
+						<div class="container-fluid d-block">
 							<ul class="navbar-nav exercise-nav gap-1">
 								<li class="nav-item">
 									<a href="{% if summary.feedback_revealed and summary.best_submission %}{{ summary.best_submission|url:'submission-plain' }}{% else %}#{% endif %}"
