--- a/templates/base.html
+++ b/templates/base.html
@@ -251,7 +251,7 @@
 						<li class="nav-item"><a class="nav-link" href="{% url 'accessibility_statement' %}">{% translate "ACCESSIBILITY_STATEMENT" %}</a></li>
 						<li class="nav-item"><a class="nav-link" href="{% url 'support_channels' %}">{% translate "SUPPORT" %}</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://link.webropol.com/s/aplus-feedback" target="_blank">{% translate "FEEDBACK" %}</a></li>
-						<li class="nav-item"><span class="navbar-text">{% brand_name %} {{ APLUS_VERSION }}</span></li>
+						<li class="nav-item ms-2"><span class="navbar-text">{% brand_name %} {{ APLUS_VERSION }}</span></li>
 					</ul>
 				</div>
 			</nav>
