Save participants page length to localstorage
Fixes #1486

--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -70,7 +70,7 @@
 		{% endif %}
 	</p>
 
-	<div id="participants-table-container" class="table-responsive">
+	<div id="participants-table-container" class="table-responsive" style="overflow-x: visible;">
 		<table id="table-participants" class="table table-sm">
 			<thead id="table-heading"></thead>
 			<tbody id="participants">
