Fix sticky alerts being covered by top navbar when scrolling content. Fixes #1489

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -64,7 +64,7 @@ iframe {
 .sticky-alert {
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    top: 0;
+    top: 60px;
     overflow: hidden;
     z-index: 100;
 }
